[metadata]
name = raise-search
version = 0.0.1

[options]
packages =
    raise_search
    raise_search.api
install_requires =
    fastapi==0.110.1
    uvicorn[standard]==0.29.0
    opensearch-py==2.5.0
    boto3==1.34.85
[options.extras_require]
test =
    flake8
    pytest
    httpx
    pytest-mock
    pytest-cov
