[metadata]
name = raise-search
version = 0.0.1

[options]
packages =
    raise_search
    raise_search.api
    raise_search.commands
install_requires =
    fastapi==0.111.1
    uvicorn[standard]==0.30.3
    opensearch-py==2.6.0
    boto3==1.34.146
    beautifulsoup4==4.12.3
[options.extras_require]
test =
    flake8
    pytest
    httpx
    pytest-mock
    pytest-cov

[options.entry_points]
console_scripts =
    create-index = raise_search.commands.create_index:main
    delete-index = raise_search.commands.delete_index:main
    index-content = raise_search.commands.index_content:main
    cat-indices = raise_search.commands.cat_indices:main